--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image">✈️</div>
+                    <div class="project-image">💳</div>
                     <div class="project-content">
                         <h3 class="project-title">Stripe Integration App</h3>
                         <p class="project-description">A cross-platform mobile application for payment integration, developed with Flutter for the frontend and nest.js for the backend, incorporating stripe payment gateway.</p>
