changing a simple text to specifiy backend

--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Safe Travel App</h3>
-                        <p class="project-description">A cross-platform mobile application for safe travel, developed with Flutter for the frontend and JavaScript for the backend, incorporating AI features for enhanced user safety, serving 200+ simulated users with real-time alerts.</p>
+                        <p class="project-description">A cross-platform mobile application for safe travel, developed with Flutter for the frontend and Node.js for the backend, incorporating AI features for enhanced user safety, serving 200+ simulated users with real-time alerts.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Flutter</span>
                             <span class="tech-tag">Dart</span>
@@ -1036,7 +1036,7 @@
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Learnverse Platform</h3>
-                        <p class="project-description">An educational platform with frontend and admin interfaces built using Angular, and backend in Python. Features include development server, code scaffolding, and testing capabilities, supporting 50+ courses with user enrollment tracking.</p>
+                        <p class="project-description">An educational platform with frontend and admin interfaces built using Angular, and backend in Django. Features include development server, code scaffolding, and testing capabilities, supporting 50+ courses with user enrollment tracking.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Angular</span>
                             <span class="tech-tag">TypeScript</span>
