cv changed to enhance visual aspect

--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
                     <p>I am dedicated to creating incredible and beneficial apps. Additionally, I have a keen interest in game development, with current knowledge limited to 2D games. I aspire to combine these passions by developing mobile games and exploring the potential of mixed reality in app development.</p>
                     <p>Currently a student at Ecole Supérieure Privée d'Ingénierie et de Technologies - ESPRIT in Tunis, Tunisia. My expertise spans cross-platform mobile development using Flutter, backend integration with Flask, and features like web scraping and API integrations.</p>
                     <p>When I'm not coding, I enjoy exploring new technologies and contributing to projects that enhance user experiences.</p>
-                    <a href="./assets/files/Omar Djebbi - Mobile Application Developer.pdf" download class="btn btn-primary cv-download">Download CV</a>
+                    <a href="./assets/files/Omar-Djebbi-Mobile-Developer-CV-2025.pdf" download class="btn btn-primary cv-download">Download CV</a>
                 </div>
             </div>
         </div>
