changed omar.dev to Portfolio

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <div class="logo">Omar.Dev</div>
+            <div class="logo">Portfolio</div>
             <div class="menu-toggle" id="menuToggle"><i class="fas fa-bars"></i></div>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link">Home</a></li>
