--- a/experiences.html
+++ b/experiences.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional Experience | Omar Djebbi</title>
-    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     
     <script src="https://cdn.tailwindcss.com"></script>
     
