fixed missed style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body class="bg-dark text-slate-300 antialiased overflow-x-hidden">
     <div id="root"></div>
     
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
